--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "name": "comp4513-assignment-2",
   "description": "",
